# morlana

./: .gitignore  Cargo.toml  LICENSE  README.md  REUSE.toml  default.nix  flake.nix  package.nix  taplo.toml
.github/: dependabot.yml
.github/workflows/: build.yml  check.yml  release.yml
src/: main.rs
src/cli/: build.rs  completions.rs  init.rs  mod.rs  switch.rs  uninstall.rs  wipe_history.rs
src/stages/: activate.rs  bootstrap.rs  build.rs  diff.rs  mod.rs  profile.rs
src/templates/: _bootstrap.nix  _flake.nix  _uninstall.nix
src/util/: command_ext.rs  log.rs  mod.rs
